# fastrpc_ProjectLinux

./: Makefile  Makefile.in  config.h  config.status  configure  libtool
autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
src/: Makefile  Makefile.am  Makefile.in  adsprpcd  cdsprpcd  libadsp_default_listener.la  libadsp_default_listener_la-adsp_default_listener.lo  libadsp_default_listener_la-adsp_default_listener1_stub.lo  libadsp_default_listener_la-adsp_default_listener_stub.lo  libadsp_default_listener_la-std.lo  libadsp_default_listener_la-std_mem.lo  libadsprpc.la  libadsprpc_la-BufBound.lo  libadsprpc_la-adsp_current_process1_stub.lo  libadsprpc_la-adsp_current_process_stub.lo  libadsprpc_la-adsp_listener1_stub.lo  libadsprpc_la-adsp_listener_stub.lo  libadsprpc_la-adsp_perf1_stub.lo  libadsprpc_la-adsp_perf_stub.lo  libadsprpc_la-adspmsgd.lo  libadsprpc_la-adspmsgd_adsp1_stub.lo  libadsprpc_la-adspmsgd_adsp_stub.lo  libadsprpc_la-adspmsgd_apps_skel.lo  libadsprpc_la-adspmsgd_printf.lo  libadsprpc_la-apps_mem_imp.lo  libadsprpc_la-apps_mem_skel.lo  libadsprpc_la-apps_remotectl_skel.lo  libadsprpc_la-apps_std_imp.lo  libadsprpc_la-apps_std_skel.lo  libadsprpc_la-atomic.lo  libadsprpc_la-cae.lo  libadsprpc_la-dspqueue_cpu.lo  libadsprpc_la-dspqueue_rpc_stub.lo  libadsprpc_la-dspsignal.lo  libadsprpc_la-fastrpc_apps_user.lo  libadsprpc_la-fastrpc_async.lo  libadsprpc_la-fastrpc_cap.lo  libadsprpc_la-fastrpc_config.lo  libadsprpc_la-fastrpc_ioctl.lo  libadsprpc_la-fastrpc_latency.lo  (+136 more)
src/.deps/: adsprpcd-adsprpcd.Po  cdsprpcd-cdsprpcd.Po  libadsp_default_listener_la-adsp_default_listener.Plo  libadsp_default_listener_la-adsp_default_listener1_stub.Plo  libadsp_default_listener_la-adsp_default_listener_stub.Plo  libadsp_default_listener_la-std.Plo  libadsp_default_listener_la-std_mem.Plo  libadsprpc_la-BufBound.Plo  libadsprpc_la-adsp_current_process1_stub.Plo  libadsprpc_la-adsp_current_process_stub.Plo  libadsprpc_la-adsp_listener1_stub.Plo  libadsprpc_la-adsp_listener_stub.Plo  libadsprpc_la-adsp_perf1_stub.Plo  libadsprpc_la-adsp_perf_stub.Plo  libadsprpc_la-adspmsgd.Plo  libadsprpc_la-adspmsgd_adsp1_stub.Plo  libadsprpc_la-adspmsgd_adsp_stub.Plo  libadsprpc_la-adspmsgd_apps_skel.Plo  libadsprpc_la-adspmsgd_printf.Plo  libadsprpc_la-apps_mem_imp.Plo  libadsprpc_la-apps_mem_skel.Plo  libadsprpc_la-apps_remotectl_skel.Plo  libadsprpc_la-apps_std_imp.Plo  libadsprpc_la-apps_std_skel.Plo  libadsprpc_la-atomic.Plo  libadsprpc_la-cae.Plo  libadsprpc_la-dspqueue_cpu.Plo  libadsprpc_la-dspqueue_rpc_stub.Plo  libadsprpc_la-dspsignal.Plo  libadsprpc_la-fastrpc_apps_user.Plo  libadsprpc_la-fastrpc_async.Plo  libadsprpc_la-fastrpc_cap.Plo  libadsprpc_la-fastrpc_config.Plo  libadsprpc_la-fastrpc_ioctl.Plo  libadsprpc_la-fastrpc_latency.Plo  libadsprpc_la-fastrpc_log.Plo  libadsprpc_la-fastrpc_mem.Plo  libadsprpc_la-fastrpc_notif.Plo  libadsprpc_la-fastrpc_perf.Plo  libadsprpc_la-fastrpc_pm.Plo  (+128 more)
src/.libs/: libadsp_default_listener.la  libadsp_default_listener.lai  libadsprpc.la  libadsprpc.lai  libadsprpc.so.0.0.0  libcdsp_default_listener.la  libcdsp_default_listener.lai  libcdsprpc.la  libcdsprpc.lai  libcdsprpc.so.0  libcdsprpc.so.0.0.0  libsdsp_default_listener.la  libsdsp_default_listener.lai  libsdsprpc.la  libsdsprpc.lai  libsdsprpc.so.0  libsdsprpc.so.0.0.0
src/dspqueue/: dspqueue_cpu.c
